# ai-seo-agent

./: .dockerignore  .gitignore  Dockerfile  agent.py  app.py  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
prompts/: prompts.py
tools/: competitor.py  content_gap.py  crawler.py  keyword_planner.py  linkedin_planner.py  report.py  search_tool.py  seo_planner.py  seo_score.py  technical_seo.py  website_analyzer.py
utils/: json_parser.py
