[project]
name = "ai-seo-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "langchain>=1.3.11",
    "langchain-core>=1.4.8",
    "langchain-google-genai>=4.2.6",
    "lxml>=6.1.1",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
]
